# image_download

./: .gitignore  CLAUDE.md  README.md  index.html  monitor_download.py  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.githooks/: pre-push
.github/workflows/: ci.yml  release.yml
.playwright-mcp/: page-2026-05-03T15-42-08-234Z.yml  page-2026-05-03T15-50-40-180Z.yml  page-2026-05-03T15-58-39-563Z.yml
docs/: RELEASING.md  SIGNING.md
docs/superpowers/plans/: 2026-05-03-plan-c-frontend-ui-mock-backend.md  2026-05-03-plan-d-packaging-ci.md  2026-05-04-plan-a-rust-core-modules.md
legacy/: README.md  download_imagery.py  requirements.txt  verify_polygon_imagery.py  visualize_imagery.py
scripts/: check-bundle.mjs
sidecar/: 1M_FUSION_LESSONS.md  EXPERIMENTS.md  FreqFusion.py  PIPELINE.md  ROUTE_C_PLAN.md  apply_sam3_cfg.py  balance_test_v2.py  bench_backends.py  bench_compare.py  bench_with_truth.py  boundary_eval.py  boundary_quality_eval.py  build_changzhi_cells.py  build_tibet_npz.py  build_tibet_pbound.py  build_xcounty_split.py  build_yolo_tibet.py  build_z18_npz.py  case_study_fig.py  chain_eval.py  changzhi_eval.py  changzhi_fuse.py  changzhi_parcel_eval.py  changzhi_xprov_eval.py  clean_and_launch.sh  clean_cells.py  clean_products.py  coco_convert.py  compare_verts.py  conf_matrix7.py  convert_fgdbs.py  convert_more_fgdbs.py  da_eval.py  da_finetune.py  diag_giants.py  dino_changzhi_eval.py  dino_parcel_eval.py  dino_parcel_export.py  dino_vectorize.py  dl_hires_cells.py  (+162 more)
sidecar/sam3_classify/: __init__.py  __main__.py  classify_rules.py  classify_siglip.py  cropland_dino.py  env_patches.py  infer.py  landcover7.py  parcel_bh.py  parcel_dist.py  parcel_seg.py  prompts.py  segment_dinov2.py  segment_samgeo.py  segment_slic.py
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cli.rs  history.rs  lib.rs  main.rs
src-tauri/src/commands/: classify.rs  download.rs  history.rs  mod.rs  runner.rs  sources.rs  vector.rs
src-tauri/src/core/: README.md  cog.rs  coverage.rs  downloader.rs  history.rs  job.rs  mod.rs  sources.rs  stitcher.rs  tiles.rs  vector.rs
src-tauri/src/mocks/: README.md  commands.rs  history_commands.rs  mod.rs  runner.rs
src-tauri/tests/: cog_test.rs  downloader_test.rs  e2e_test.rs  history_test.rs  sources_test.rs  tiles_test.rs  vector_test.rs
src-tauri/tests/fixtures/: triangle.geojson
src/components/: HistoryPanel.svelte  InputPanel.svelte  MapPanel.svelte  ProgressPanel.svelte  Toast.svelte
src/lib/: format.ts  ipc.ts  sources.ts  state.svelte.ts  types.ts  validate.ts
src/tests/: format.test.ts  ipc.test.ts  validate.test.ts
(+1 files in other folders)
