[package]
name = "imagery-downloader"
version = "0.0.1"
description = "Download satellite XYZ tiles for a bounding box and write COG GeoTIFF"
authors = ["zhangfeng04@gmail.com"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "imagery_downloader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
