[package]
name = "imagery-downloader"
version = "0.0.1"
description = "Download satellite XYZ tiles for a bounding box and write COG GeoTIFF"
authors = ["zhangfeng04@gmail.com"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "imagery_downloader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.52.1", features = ["rt-multi-thread", "sync", "macros", "time"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
uuid = { version = "1.20.0", features = ["v4"] }
directories = "6.0.0"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
image = { version = "0.25", features = ["png", "jpeg"] }
tiff = "0.10"
geojson = "0.24"
shapefile = "0.6"
rusqlite = { version = "0.32", features = ["bundled"] }
bytes = "1"
futures = { version = "0.3", features = ["std"] }
anyhow = "1"
thiserror = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
